--- a/Q3_clustering.ipynb
+++ b/Q3_clustering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "024e42fd",
    "metadata": {},
    "outputs": [],
@@ -18,17 +18,18 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from sklearn.cluster import KMeans, DBSCAN\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "52e7ee43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('./insurance.csv')"
+    "data = pd.read_csv('insurance.csv')\n"
    ]
   },
   {
@@ -41,16 +42,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "2d0f21f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.84184665 -0.30151298 -0.5270176  -0.58239982]\n",
+      " [ 0.82958699  0.33701896 -0.4556558   0.64352532]\n",
+      " [ 0.05843855 -0.03226567  1.33658208 -0.05238068]]\n",
+      "[498 480 360]\n",
+      "{0: 443, 1: 323, 2: 298}\n",
+      "{0: 55, 1: 157, 2: 62}\n"
+     ]
+    }
+   ],
+   "source": [
+    "features = data[['age', 'bmi', 'children', 'charges']]\n",
+    "scaler = StandardScaler()\n",
+    "scaled_data = scaler.fit_transform(features)\n",
+    "model = KMeans(3,init='k-means++', random_state=42)\n",
+    "model.fit(scaled_data)\n",
+    "\n",
+    "#centroids of all three clusters\n",
+    "centroids = model.cluster_centers_\n",
+    "print(centroids)\n",
+    "\n",
+    "#size of each cluster\n",
+    "labels = model.labels_\n",
+    "cluster_sizes = np.bincount(labels)\n",
+    "print(cluster_sizes)\n",
+    "\n",
+    "\n",
+    "#number of smokers and non-smokers in each cluster\n",
+    "number_smokers = {0 : 0, 1 : 0, 2 : 0 }\n",
+    "number_non_smokers = {0 : 0, 1 : 0, 2 : 0 }\n",
+    "\n",
+    "for i in range(len(labels)):\n",
+    "    if data.iloc[i]['smoker'] == 'no':\n",
+    "        number_non_smokers[labels[i]] += 1\n",
+    "    if data.iloc[i]['smoker'] == 'yes':\n",
+    "        number_smokers[labels[i]] += 1\n",
+    "\n",
+    "print(number_non_smokers)\n",
+    "print(number_smokers)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -64,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
