--- a/Q2_decision_trees.ipynb
+++ b/Q2_decision_trees.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "id": "208d00d2",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "92ad2595",
    "metadata": {},
    "outputs": [],
@@ -70,11 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "d33b2080",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.48880597014925375\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_true = test_dataset_oh['chargeGroup']\n",
+    "wishful_thinking = ['low']*len(y_true)\n",
+    "\n",
+    "accuracy = accuracy_score(y_true,wishful_thinking)\n",
+    "print(accuracy)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,11 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "585d32d3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3880597014925373\n"
+     ]
+    }
+   ],
+   "source": [
+    "mode_value = train_dataset_oh['chargeGroup'].mode()\n",
+    "mode_based = [mode_value]*len(y_true)\n",
+    "accuracy = accuracy_score(y_true,mode_based)\n",
+    "\n",
+    "print(accuracy)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "86740caa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1d9f4dad1d0>"
+       "<matplotlib.collections.PathCollection at 0x1e6181b5950>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -152,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "id": "8412d395",
    "metadata": {},
    "outputs": [
